# pulmoscan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MODEL_CARD.md  Makefile  PROJECT_REPORT.md  README.md  docker-compose.yml  eda.py  predict.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup_data.py  train.py
.github/workflows/: ci.yml
chestxray/: __init__.py  __main__.py  api.py  audit.py  auth.py  calibration.py  cases.py  checkpoint.py  cli.py  clinical.py  config.py  data.py  dataset_setup.py  eda.py  engine.py  feedback_export.py  fhir.py  gradcam.py  imaging.py  inference.py  jobs.py  metrics.py  model.py  models_registry.py  observability.py  quality.py  release.py  report.py  review.py  sqlite_store.py  store.py  utils.py  visualize.py
chestxray/web/: app.js  index.html  styles.css
scripts/: generate_readme_demo.py
tests/: conftest.py  test_audit.py  test_calibration.py  test_checkpoint.py  test_data.py  test_data_split.py  test_hospital.py  test_imaging.py  test_imports.py  test_improvements.py  test_inference_api.py  test_model.py  test_quality.py
